--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# Compiled source #
+
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+
+# Packages #
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+
 # OS generated files #
 
 .DS_Store
@@ -7,3 +31,5 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+__pycache__
